# ESLViewer

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: qESLConnection.cpp  qESLConnection.h  settings.cpp  settings.h
src/core/model/: eslEventsModel.cpp  eslEventsModel.h  eslEventsModelItem.cpp  eslEventsModelItem.h
src/gui/: connectDialog.cpp  connectDialog.h  eslSettingsDialog.cpp  eslSettingsDialog.h  mainWindow.cpp  mainWindow.h
